# luthien-proxy

./: .env.example  pyproject.toml
.legion/: architect.json  implement.json
.legion/tasks/: bg_98c4c65b7f094d214322452b.json
changelog.d/: 557-string-replacement-request-filtering.md  history-detail-performance.md
docker/: Dockerfile.gateway
docs/plans/: 2026-04-07-policies-page-redesign.md
migrations/postgres/: 014_add_user_id.sql
src/luthien_proxy/: auth.py  config_fields.py  dependencies.py  gateway_routes.py  main.py  settings.py  telemetry.py
src/luthien_proxy/admin/: policy_discovery.py  routes.py
src/luthien_proxy/history/: models.py  routes.py  service.py
src/luthien_proxy/observability/: emitter.py  session_summary.py
src/luthien_proxy/pipeline/: anthropic_processor.py  session.py
src/luthien_proxy/policies/: all_caps_policy.py  conversation_link_policy.py  debug_logging_policy.py  dogfood_safety_policy.py  hackathon_onboarding_policy.py  hackathon_policy_template.py  multi_serial_policy.py  noop_policy.py  onboarding_policy.py  sample_pydantic_policy.py  simple_llm_policy.py  simple_noop_policy.py  string_replacement_policy.py  tool_call_judge_policy.py
src/luthien_proxy/policies/presets/: block_dangerous_commands.py  block_sensitive_file_writes.py  block_web_requests.py  deslop.py  no_apologies.py  no_yapping.py  plain_dashes.py  prefer_uv.py
src/luthien_proxy/policy_core/: base_policy.py  policy_context.py
src/luthien_proxy/retention/: __init__.py  archiver.py  purger.py
src/luthien_proxy/static/: conversation_live.js  policy_config.html  policy_config.js
src/luthien_proxy/ui/: routes.py
src/luthien_proxy/utils/sqlite_migrations/: 014_add_user_id.sql
src/luthien_proxy/webhook/: __init__.py  sender.py
tests/luthien_proxy/unit_tests/: test_admin_routes.py  test_auth.py  test_telemetry.py
tests/luthien_proxy/unit_tests/history/: test_routes.py  test_service.py  test_service_sqlite.py
tests/luthien_proxy/unit_tests/pipeline/: test_anthropic_processor.py  test_session.py
tests/luthien_proxy/unit_tests/policies/: test_string_replacement_policy.py
tests/luthien_proxy/unit_tests/retention/: test_archiver.py  test_purger.py
tests/luthien_proxy/unit_tests/webhook/: test_sender.py
