[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "luthien-proxy"
dynamic = ["version"]
description = "Redwood-style AI Control within an LLM proxy for production agentic deployments"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "Apache-2.0"}
authors = [
    {name = "Jai Dhyani", email = "jai@luthienresearch.org"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "aiosqlite>=0.20.0",
    "asyncpg>=0.30.0",
    "beartype>=0.21.0",
    "click>=8.1.0",
    "cryptography>=44.0.0",
    "httpx>=0.28.1",
    "litellm[proxy]>=1.81.0,!=1.82.7,!=1.82.8",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20.0",
    "opentelemetry-instrumentation-fastapi>=0.41b0",
    "opentelemetry-instrumentation-redis>=0.41b0",
    "psycopg>=3.2.9",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0.2",
    "redis>=6.4.0",
    "anthropic>=0.84.0",
    "aiohttp>=3.9.0",
    "sentry-sdk[fastapi]>=2.54.0",
    "opentelemetry-exporter-otlp-proto-http>=1.20.0",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/luthien_proxy/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/luthien_proxy"]

[tool.ruff]
target-version = "py313"
src = ["src", "tests", "saas_infra"]
line-length = 120
extend-exclude = [".claude/skills"]  # Documentation fragments, not source code

[tool.ruff.lint]
select = [
    "E",        # pycodestyle errors
    "F",        # pyflakes
    "I",        # isort (import sorting)
    "D",        # pydocstyle (docstrings)
    "PLC0415",  # import-outside-toplevel: disallow imports inside functions
]
ignore = []
extend-ignore = [
    "E501",  # line too long (handled by formatter)
]
per-file-ignores = { "migrations/**" = ["ALL"], "scripts/**" = ["D"], "tests/**" = ["D", "PLC0415"], "tests/luthien_proxy/unit_tests/test_saas_infra/**" = ["D", "PLC0415", "E402"], "src/luthien_cli/**" = ["D", "E402", "PLC0415"] }

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
addopts = "-q -ra -m 'not e2e and not integration and not mock_e2e and not sqlite_e2e' --import-mode=importlib --cov=src/luthien_proxy --cov-report=term-missing --timeout=3 --timeout-method=signal"
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "default::DeprecationWarning",
    "default::PendingDeprecationWarning",
    "default::ResourceWarning",
]
markers = [
    "e2e: marks end-to-end tests that require an assembled control plane",
    "integration: marks integration tests that require external services (OpenAI, Anthropic APIs)",
    "mock_e2e: marks e2e tests that use the mock Anthropic server (no real API calls)",
    "sqlite_e2e: marks e2e tests running the gateway in-process with SQLite (no Docker)",
    "llm01: OWASP LLM01 - Prompt Injection scenarios",
    "llm02: OWASP LLM02 - Insecure Output Handling scenarios (reserved, no tests yet)",
    "llm04: OWASP LLM04 - Model Denial of Service scenarios (reserved, no tests yet)",
    "llm06: OWASP LLM06 - Sensitive Information Disclosure scenarios",
    "llm07: OWASP LLM07 - Insecure Plugin Design / Tool Call scenarios (reserved, no tests yet)",
    "llm08: OWASP LLM08 - Excessive Agency scenarios",
    "uat_onboarding: UAT - Onboarding Context (LLM01 Trello)",
    "uat_deslop: UAT - DeSlop Policy activation without 400 (LLM02 Trello)",
    "uat_unimplemented: UAT - Unimplemented policy error handling (LLM03 Trello)",
    "uat_api_key: UAT - API Key Error Messaging format (LLM04 Trello)",
    "uat_stability: UAT - Policy Setup Stability (LLM05 Trello)",
]
timeout_func_only = false

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "basic"
include = ["src", "saas_infra"]
exclude = ["src/luthien_cli"]
reportMissingTypeStubs = "none"
useLibraryCodeForTypes = true
venvPath = "."
venv = ".venv"
reportMissingImports = "warning"

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.10",
    "pyright>=1.1.406,<1.2",
    "pytest-timeout>=2.4.0",
    "radon>=6.0.1",
    "vulture>=2.14",
    "asgi-lifespan>=2.1.0",
    "luthien-cli",
    "pytest-httpx>=0.35.0",
]

[tool.uv.sources]
luthien-cli = { path = "src/luthien_cli", editable = true }
